[package]
name = "inkifier-ced"
version = "0.0.1"
authors = ["elamir <amirrezatm@protonmail.com>"]
description = "Inkifer Canny-Edge-Detector"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23.0"
imageproc = "0.22.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
